@@ -32,20 +32,24 @@ public class WebSecurityConfig {
    * CORS 設定、JWT トークン検証を設定します。
    *
    * @param http http リクエスト。
+   * @param userIdThreadContextFilter ユーザー ID を ThreadLocal に格納するフィルター。
    * @return フィルターチェーン。
    * @throws Exception 例外。
    */
   @Bean
-  public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-    http.securityMatcher("/api/**").cors(cors -> cors.configurationSource(request -> {
-      CorsConfiguration conf = new CorsConfiguration();
-      conf.setAllowCredentials(true);
-      conf.setAllowedOrigins(Arrays.asList(allowedOrigins));
-      conf.setAllowedMethods(List.of("GET", "HEAD", "POST", "PUT", "DELETE", "OPTIONS"));
-      conf.setAllowedHeaders(List.of("*"));
-      return conf;
-    })).oauth2ResourceServer(oauth2 -> oauth2.jwt(Customizer.withDefaults()))
-        .addFilterAfter(new UserIdThreadContextFilter(), AuthorizationFilter.class);
+  public SecurityFilterChain filterChain(HttpSecurity http,
+      UserIdThreadContextFilter userIdThreadContextFilter) throws Exception {
+    http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.deny())
+        .contentSecurityPolicy(csp -> csp.policyDirectives("frame-ancestors 'none';")))
+        .securityMatcher("/api/**").cors(cors -> cors.configurationSource(request -> {
+          CorsConfiguration conf = new CorsConfiguration();
+          conf.setAllowCredentials(true);
+          conf.setAllowedOrigins(Arrays.asList(allowedOrigins));
+          conf.setAllowedMethods(List.of("GET", "HEAD", "POST", "PUT", "DELETE", "OPTIONS"));
+          conf.setAllowedHeaders(List.of("*"));
+          return conf;
+        })).oauth2ResourceServer(oauth2 -> oauth2.jwt(Customizer.withDefaults()))
+        .addFilterAfter(userIdThreadContextFilter, AuthorizationFilter.class);
     return http.build();
   }
 }
